--- a/app.json
+++ b/app.json
@@ -21,7 +21,9 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.myapk.apk",
+      "versionCode": 1
     },
     "web": {
       "favicon": "./assets/favicon.png"
